minur fixes and working on getting java8 jar running